--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,15 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right">
-        {% if user.is_authenticated %}
-        <form class='navbar-form navbar-right' method="post" action="/logout">
+        {% if user.is_active %}
+        <form class='navbar-form navbar-right' method="post" action="/logout/">
         <div class="form-group">
           <input type="submit" class="btn btn-primary" value="Logout" />
         </div>
       </form>
         {% else %}
-        <form class='navbar-form navbar-right login-form' method="post" action="/login">
+        <form class='navbar-form navbar-right login-form' method="post" action="/login/">
+          {% csrf_token %}
           <div class="form-group">
           <input type="text" class="form-control" id="login_username" name="login_username" placeholder="Username" />
         </div>
@@ -44,6 +45,7 @@
         </div>
         <div class="form-group login-button">
           <input type="submit" class="btn btn-default" value="Login" />
+          <input type="hidden" name="next" value="{{ next }}" />
         </div>
       </form>
     {% endif %}
