Register users form

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,11 @@ body {
     background: #0079BF;
 }
 
+.username-text {
+    color: white;
+    margin-right: 10px;
+}
+
 .login-form {
     margin-right: 0px;
 }
