--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -12,14 +12,15 @@
     </br>
     <div class="row">
       <div class="col-md-4">
-        <form method="post" action="/register">
+        <form method="post" action="/register/">
+          {% csrf_token %}
           <div class="form-group">
             <label for="username">Nickname:</label>
             <input type="text" class="form-control" id="username" name="username" />
           </div>
           <div class="form-group">
             <label for="email">Email:</label>
-            <input type="text" class="form-control" id="email" name="email" />
+            <input type="email" class="form-control" id="email" name="email" />
           </div>
           <div class="form-group">
             <label for="password1">Password:</label>
