--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,10 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
         {% if user.is_active %}
-        <form class='navbar-form navbar-right' method="post" action="/logout/">
+        <form class='navbar-form navbar-right login-form' method="post" action="/logout/">
+        {% csrf_token %}
         <div class="form-group">
+          <span class="username-text">{{ user.username }}</span>
           <input type="submit" class="btn btn-primary" value="Logout" />
         </div>
       </form>
