--- a/boards/templates/boards/boards.html
+++ b/boards/templates/boards/boards.html
@@ -5,124 +5,50 @@
 
 {% block content %}
 
-<div class="clearfix"></div>
-
-<ol id="board_lists">
-	<li class="list" draggable="true">
-		<div class="dropdown list_options">
-		  <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			<i class="fa fa-large fa-caret-down"></i>
-		  </a>
-		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			<li><a href="#">Action</a></li>
-			<li><a href="#">Another action</a></li>
-			<li><a href="#">Something else here</a></li>
-			<li><a href="#">Separated link</a></li>
-		  </ul>
-		</div>
-
-		<h2>List name</h2>
-
-		<ol class="list_items">
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 2</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li class="add"><a href="#" data-toggle="modal" data-target="#add_list_item_modal">add item...</a></li>
-		</ol>
-	</li>
-	<li class="list" draggable="true">
-		<div class="dropdown list_options">
-		  <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			<i class="fa fa-large fa-caret-down"></i>
-		  </a>
-		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			<li><a href="#">Action</a></li>
-			<li><a href="#">Another action</a></li>
-			<li><a href="#">Something else here</a></li>
-			<li><a href="#">Separated link</a></li>
-		  </ul>
-		</div>
-
-		<h2>List name</h2>
-
-		<ol class="list_items">
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 2</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li class="add"><a href="#" data-toggle="modal" data-target="#add_list_item_modal">add item...</a></li>
-		</ol>
-	</li>
-	<li class="list" draggable="true">
-		<div class="dropdown list_options">
-		  <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			<i class="fa fa-large fa-caret-down"></i>
-		  </a>
-		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			<li><a href="#">Action</a></li>
-			<li><a href="#">Another action</a></li>
-			<li><a href="#">Something else here</a></li>
-			<li><a href="#">Separated link</a></li>
-		  </ul>
-		</div>
-
-		<h2>List name</h2>
-
-		<ol class="list_items">
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 2</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li class="add"><a href="#" data-toggle="modal" data-target="#add_list_item_modal">add item...</a></li>
-		</ol>
-	</li>
-	<li class="list add_list">
-		<a href="javascript:;">add new list</a>
-	</li>
-</ol>
-
-
-<div class="modal fade" id="add_list_item_modal">
-  <div class="modal-dialog">
-	<div class="modal-content">
-	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title">Add list item</h4>
-	  </div>
-	  <div class="modal-body">
-		<p>dem modal bodies go here</p>
-	  </div>
-	  <div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		<button type="button" class="btn btn-primary">Save changes</button>
-	  </div>
-	</div>
-  </div>
+<div class="panel panel-primary">
+ <div class="panel-heading">My Boards</div>
+ <div class="panel-body">
+ {% if not created_boards %}
+    <div class="alert alert-warning text-center">You don't have any boards. Create one?</div>
+ {% else %}
+     {% for board in created_boards %}
+     <a href="/boards/{{ board.id }}"/>
+        <div class="board-button">
+            <div class="board-text">{{ board.title }}</div>
+        </div>
+     </a>
+     {% endfor %}
+ {% endif %}
+<div class="new-board">
+  <form method="post" action="/boards/new/">
+      {% csrf_token %}   
+        <div class="form-group">
+          <label for="board_title">Create new board:</label>
+          <input type="text" class="form-control" id="board_title" name="board_title" placeholder="My new board"/>
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btn btn-default" value="Create" />
+        </div>
+   </form>
+ </div>
+ </div>
 </div>
 
-<div class="modal fade" id="view_list_item_modal">
-  <div class="modal-dialog">
-	<div class="modal-content">
-	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title">Item Name</h4>
-	  </div>
-	  <div class="modal-body">
-		<p>dem modal bodies go here</p>
-	  </div>
-	  <div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		<button type="button" class="btn btn-primary">Save changes</button>
-	  </div>
-	</div>
-  </div>
+<div class="panel panel-primary">
+ <div class="panel-heading">Other Boards</div>
+ <div class="panel-body">
+ {% if not other_boards %}
+    <div class="alert alert-warning text-center">Nobody has added you to their boards</div>
+ {% else %}
+     {% for board in other_boards %}
+     <a href="/boards/{{ board.id }}"/>
+        <div class="board-button">
+            <div class="board-text">{{ board.title }}</div>
+        </div>
+     </a>
+     {% endfor %}
+ {% endif %}
+ </div>
 </div>
 
-{% endblock %}
-
-{% block extra_js %}
-	<script src="{% static 'js/board.js' %}"></script>
 {% endblock %}
