--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -3,7 +3,7 @@
 {% block title %} Sign up{% endblock %}
 
 {% block content %}
-<div class="panel panel-info">
+<div class="panel panel-primary">
  <div class="panel-heading">Sign Up</div>
  <div class="panel-body">
     <p>
