--- a/boards/templates/boards/board.html
+++ b/boards/templates/boards/board.html
@@ -10,6 +10,7 @@
 {% block content %}
 
 <ol id="board_lists">
+	{% for board_list in lists %}
 	<li class="list" draggable="true">
 		<div class="dropdown list_options">
 		  <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -23,105 +24,101 @@
 		  </ul>
 		</div>
 
-		<h2>List name</h2>
+		<h2>{{ board_list.title }}</h2>
 
 		<ol class="list_items">
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 2</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li class="add"><a href="#" data-toggle="modal" data-target="#add_list_item_modal">add item...</a></li>
+			{% for list_entry in board_list.list_entries %}
+				<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal{{ list_entry.id }}">
+					{{ list_entry.title }}
+				</li>
+			{% endfor %}
+			<li class="add"><a href="#" data-toggle="modal" data-target="#add_list_item_modal{{ board_list.id }}">add item...</a></li>
 		</ol>
 	</li>
-	<li class="list" draggable="true">
-		<div class="dropdown list_options">
-		  <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			<i class="fa fa-large fa-caret-down"></i>
-		  </a>
-		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			<li><a href="#">Action</a></li>
-			<li><a href="#">Another action</a></li>
-			<li><a href="#">Something else here</a></li>
-			<li><a href="#">Separated link</a></li>
-		  </ul>
-		</div>
-
-		<h2>List name</h2>
-
-		<ol class="list_items">
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 2</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li class="add"><a href="#" data-toggle="modal" data-target="#add_list_item_modal">add item...</a></li>
-		</ol>
-	</li>
-	<li class="list" draggable="true">
-		<div class="dropdown list_options">
-		  <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			<i class="fa fa-large fa-caret-down"></i>
-		  </a>
-		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			<li><a href="#">Action</a></li>
-			<li><a href="#">Another action</a></li>
-			<li><a href="#">Something else here</a></li>
-			<li><a href="#">Separated link</a></li>
-		  </ul>
-		</div>
-
-		<h2>List name</h2>
-
-		<ol class="list_items">
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 1</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 2</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li draggable="true" data-toggle="modal" data-target="#view_list_item_modal">item 3</li>
-			<li class="add"><a href="#" data-toggle="modal" data-target="#add_list_item_modal">add item...</a></li>
-		</ol>
-	</li>
-	<li class="list add_list">
-		<a href="javascript:;">add new list</a>
-	</li>
+	{% endfor %}
+	<a href="javascript:;">
+		<div class="list add_list" data-toggle="modal" data-target="#add_list_modal">
+	        Add a list...
+	    </div>
+	</a>
 </ol>
 
-
-<div class="modal fade" id="add_list_item_modal">
-  <div class="modal-dialog">
-	<div class="modal-content">
-	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title">Add list item</h4>
-	  </div>
-	  <div class="modal-body">
-		<p>dem modal bodies go here</p>
-	  </div>
-	  <div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		<button type="button" class="btn btn-primary">Save changes</button>
+{% for board_list in lists %}
+{% for list_entry in board_list.list_entries %}
+	<div class="modal fade" id="view_list_item_modal{{ list_entry.id }}">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title">{{ list_entry.title}}</h4>
+	      </div>
+	      <div class="modal-body">
+	        <p>{{ list_entry.description}}</p>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary">Save changes</button>
+	      </div>
+	    </div>
 	  </div>
 	</div>
+{% endfor %}
+{% endfor %}
+<div class="modal fade" id="add_list_modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+    <form method="post" action="{% url 'new_list' %}">
+      {% csrf_token %}
+      <input type="hidden" id="board_id "name="board_id" value="{{ board_id }}" />
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Add a list</h4>
+      </div>
+      <div class="modal-body">
+            <div class="form-group">
+              <label for="list_title">Title:</label>
+              <input type="text" class="form-control" id="list_title" name="list_title" placeholder="My new list"/>
+            </div>
+      </div>
+      <div class="modal-footer">
+        <input type="submit" class="btn btn-primary" value="Add" />
+      </div>
+      </form>
+    </div>
   </div>
 </div>
 
-<div class="modal fade" id="view_list_item_modal">
+{% for board_list in lists %}
+<div class="modal fade" id="add_list_item_modal{{ board_list.id }}">
   <div class="modal-dialog">
-	<div class="modal-content">
-	  <div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h4 class="modal-title">Item Name</h4>
-	  </div>
-	  <div class="modal-body">
-		<p>dem modal bodies go here</p>
-	  </div>
-	  <div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		<button type="button" class="btn btn-primary">Save changes</button>
-	  </div>
-	</div>
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Add a new list item</h4>
+      <form method="post" action="{% url 'new_list_item' %}">
+      {% csrf_token %}
+      <input type="hidden" id="list_id "name="list_id" value="{{ board_list.id }}" />
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      <div class="modal-body">
+            <div class="form-group">
+              <label for="list_title">Title:</label>
+              <input type="text" class="form-control" id="list_item_title" name="list_item_title" placeholder="My new list item"/>
+            </div>
+            <div class="form-group">
+              <label for="list_title">Description:</label>
+              <textarea class="form-control" id="list_item_description" name="list_item_description" Placeholder="My description"></textarea>
+            </div>
+      </div>
+      <div class="modal-footer">
+        <input type="submit" class="btn btn-primary" value="Add" />
+      </div>
+      </form>
+    </div>
   </div>
 </div>
+{% endfor %}
 
 {% endblock %}
 
