--- a/boards/templates/boards/boards.html
+++ b/boards/templates/boards/boards.html
@@ -9,7 +9,8 @@
  <div class="panel-heading">My Boards</div>
  <div class="panel-body">
  {% if not created_boards %}
-    <div class="alert alert-warning text-center">You don't have any boards. Create one?</div>
+    <div class="alert alert-warning text-center">You don't have any boards. Create one?
+    </div>
  {% else %}
      {% for board in created_boards %}
      <a href="/boards/{{ board.id }}"/>
@@ -19,18 +20,11 @@
      </a>
      {% endfor %}
  {% endif %}
-<div class="new-board">
-  <form method="post" action="/boards/new/">
-      {% csrf_token %}   
-        <div class="form-group">
-          <label for="board_title">Create new board:</label>
-          <input type="text" class="form-control" id="board_title" name="board_title" placeholder="My new board"/>
-        </div>
-        <div class="form-group">
-          <input type="submit" class="btn btn-default" value="Create" />
-        </div>
-   </form>
- </div>
+    <a href="javascript:;">
+         <div class="board-button new-board" data-toggle="modal" data-target="#new_board_modal">
+            <div class="new-board-text">Create new board</div>
+         </div>
+     </a>
  </div>
 </div>
 
@@ -41,7 +35,7 @@
     <div class="alert alert-warning text-center">Nobody has added you to their boards</div>
  {% else %}
      {% for board in other_boards %}
-     <a href="/boards/{{ board.id }}"/>
+     <a href="{% url 'board' board.id %}"/>
         <div class="board-button">
             <div class="board-text">{{board.creator}}'s {{ board.title }}</div>
         </div>
@@ -49,6 +43,32 @@
      {% endfor %}
  {% endif %}
  </div>
+</div>
+
+<div class="modal fade" id="new_board_modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+    <form method="post" action="{% url 'new_board' %}">
+      {% csrf_token %}   
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Create new board</h4>
+      </div>
+      <div class="modal-body">
+            <div class="form-group">
+              <label for="board_title">Title:</label>
+              <input type="text" class="form-control" id="board_title" name="board_title" placeholder="My new board" required/>
+            </div>
+            <div class="form-group">
+              
+            </div>
+      </div>
+      <div class="modal-footer">
+        <input type="submit" class="btn btn-primary" value="Create" />
+      </div>
+      </form>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
