--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -12,7 +12,7 @@
     </br>
     <div class="row">
       <div class="col-md-4">
-        <form method="post" action="/register/">
+        <form method="post" action="{% url 'register' %}">
           {% csrf_token %}
           <div class="form-group">
             <label for="username">Nickname:</label>
