--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,22 +1,25 @@
-.new-board {
-    width: 200px;
-    height: 120px;
-    background-color: #eee;
-    padding: 20px;
-    margin: 10px;
-}
-
 .board-button {
     width: 200px;
     height: 100px;
     margin: 10px;
     display: inline-block;
     background-color: #0079BF;
+    border-radius: 4px;
+    box-shadow: 1px 1px #666;
 }
 
 .board-text {
     padding: 10px;
     color: #FFF;
+}
+
+.new-board {
+    background-color: #eee;
+}
+
+.new-board-text {
+    padding: 10px;
+    color: #999;
 }
 
 .username-text {
