--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="{% static 'libs/bootstrap-3.3.5/css/bootstrap-theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'libs/bootstrap-3.3.5/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'libs/bootstrap-3.3.5/css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
  <body>
@@ -29,7 +29,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
         {% if user.is_active %}
-        <form class='navbar-form navbar-right login-form' method="post" action="/logout/">
+        <form class='navbar-form navbar-right login-form' method="post" action="{% url 'logout' %}">
         {% csrf_token %}
         <div class="form-group">
           <span class="username-text">{{ user.username }}</span>
@@ -37,7 +37,7 @@
         </div>
       </form>
         {% else %}
-        <form class='navbar-form navbar-right login-form' method="post" action="/login/">
+        <form class='navbar-form navbar-right login-form' method="post" action="{% url 'login' %}">
           {% csrf_token %}
           <div class="form-group">
           <input type="text" class="form-control" id="login_username" name="login_username" placeholder="Username" />
