--- a/static/css/board.css
+++ b/static/css/board.css
@@ -2,6 +2,40 @@ body {
     background-color: #0079BF;
 }
 
+body .container {
+    width: 100%;
+}
+
+.board-nav-bar {
+    width: 20%;
+    display:inline-block;
+    vertical-align: top;
+    padding: 10px;
+    margin-left: 2%;
+    border-radius: 4px;
+    background-color: #EEE;
+}
+
+#board_lists 
+{   
+    width: 78%;
+    display:inline-block;
+}
+
+.board-name {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 20px
+}
+
+.members-list {
+    margin-bottom: 10px
+}
+
+.members-list li {
+    margin-left:30px;
+}
+
 .list
 {
     display: inline-block;
