--- a/static/css/board.css
+++ b/static/css/board.css
@@ -16,6 +16,10 @@ body .container {
     background-color: #EEE;
 }
 
+.board-nav-bar-item {
+    margin-bottom: 10px;
+}
+
 #board_lists 
 {   
     width: 78%;
@@ -28,11 +32,7 @@ body .container {
     margin-bottom: 20px
 }
 
-.members-list {
-    margin-bottom: 10px
-}
-
-.members-list li {
+.board-nav-bar-item li {
     margin-left:30px;
 }
 
