--- a/boards/templates/boards/board.html
+++ b/boards/templates/boards/board.html
@@ -135,23 +135,27 @@
 </div>
 
 {% for list_entry in board_list.list_entries %}
+<form action="{% url 'change_entry' %}" method="post">
+	{% csrf_token %}
+	<input type="hidden" name="list_entry_id" value={{ list_entry.id}} />
 	<div class="modal fade" id="view_list_item_modal{{ list_entry.id }}">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title">{{ list_entry.title}}</h4>
+	        <input type="text" name="list_entry_title" class="modal-title" value="{{ list_entry.title}}" />
 	      </div>
 	      <div class="modal-body">
-	        <p>{{ list_entry.description}}</p>
+	        <p><textarea rows="4" cols="50" name="list_entry_description">{{ list_entry.description}}</textarea></p>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save changes</button>
+	        <button type="submit" class="btn btn-primary">Save changes</button>
 	      </div>
 	    </div>
 	  </div>
 	</div>
+</form>
 {% endfor %}
 {% endfor %}
 <div class="modal fade" id="add_list_modal">
